cluster/manifests/navidrome/navidrome-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: navidrome
spec:
  ports:
  - port: 4533
    targetPort: 4533
  selector:
    app.kubernetes.io/name: navidrome
