cluster/manifests/navidrome/navidrome-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome
  namespace: navidrome
spec:
  entryPoints:
  - privateweb
  - privatesecure
  - wgweb
  - wgsecure
  routes:
  - kind: Rule
    match: Host(`navidrome.lan.ftzmlab.xyz`)
    services:
    - name: navidrome
      port: 4533
  tls: {}
